Assignment4/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.service.type: LoadBalancer
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/network-backend: "true"
        io.kompose.network/network-frontend: "true"
        io.kompose.service: backend
    spec:
      containers:
        - env:
            - name: DB_HOST
              value: db-tcp
            - name: DB_NAME
              value: log
            - name: DB_PASSWORD
              value: password
            - name: DB_PORT
              value: "5432"
            - name: DB_USER
              value: postgres
          image: korochi/639000-cloud-computing-service-architecture:backend
          name: backend
          ports:
            - containerPort: 9000
          resources: {}
      restartPolicy: Always
status: {}
