Assignment4/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.service.type: LoadBalancer
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/network-frontend: "true"
        io.kompose.service: frontend
    spec:
      containers:
        - image: korochi/639000-cloud-computing-service-architecture:frontend
          name: frontend
          ports:
            - containerPort: 80
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
