Assignment4/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: minio
  name: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: minio
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.service.type: LoadBalancer
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/network-frontend: "true"
        io.kompose.service: minio
    spec:
      containers:
        - image: korochi/639000-cloud-computing-service-architecture:minio
          name: minio
          ports:
            - containerPort: 8000
            - containerPort: 8001
          resources: {}
      restartPolicy: Always
status: {}
