Assignment4/frontend-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend-tcp
  name: frontend-tcp
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 80
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: frontend
  type: LoadBalancer
status:
  loadBalancer: {}
