Assignment4/network-backend-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: network-backend
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/network-backend: "true"
  podSelector:
    matchLabels:
      io.kompose.network/network-backend: "true"
