Assignment4/network-frontend-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: network-frontend
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/network-frontend: "true"
  podSelector:
    matchLabels:
      io.kompose.network/network-frontend: "true"
